<resources>
    <string name="app_name">Народный контроль</string>
    <string name="input_number">Номер телефона</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_send">Отправить</string>
    <string name="title_registration">Регистрация</string>
    <string name="input_password">Пароль</string>
    <string name="input_name">Ф.И.О.</string>
    <string name="input_email">Email</string>
    <string name="title_city">Город:</string>
    <string name="title_login">Вход</string>
    <string name="title_no_auth"><u>Зарегистрироваться</u></string>
    <string name="title_categories">Сферы</string>
    <string name="title_map">Карта проблемных зон</string>
    <string name="title_requests">Заявки</string>
    <string name="title_new_request">Новая заявка</string>
    <string name="title_archive">Мой архив</string>
    <string name="title_profile">Профиль</string>
    <string name="tab_number">Номер</string>
    <string name="tab_name">Описание</string>
    <string name="tab_rating">Рейтинг</string>
    <string name="tab_date">Дата</string>
    <string name="title_my_requests"><u>Мои заявки</u></string>
    <string name="input_description">Описание</string>
    <string name="input_address">Адрес</string>
    <string name="visible_name">Анонимно</string>
    <string name="input_video">Ссылка на видео</string>
    <string name="title_transport">Расписание транспорта</string>
    <string name="google_maps_key">api_key</string>
    <string name="title_bus">Маршрут:</string>
    <string name="btn_check_timetable">Проверить расписание</string>
    <string name="btn_add_appeal">Добавить к заявке</string>
    <string name="input_error">Обязательно поле</string>
    <string name="btn_add_photo">Загрузить фотографии</string>
    <string name="input_category">Категория</string>
    <string name="forward_direction">Прямое направление</string>
    <string name="reverse_direction">Обратное</string>
    <string name="title_request">Заявка</string>
    <string name="btn_show_on_map"><u>На карте</u></string>
    <string name="title_description">Описание:</string>
    <string name="title_address">Адрес:</string>
    <string name="title_date">Дата обращения:</string>
    <string name="title_video">Видео:</string>
    <string name="title_edit_profile">Редактировать</string>
    <string name="title_num_request">Количество заявок:</string>
    <string name="success_signup">Вы зарегистрированы</string>
    <string name="success_logout">Вы вышли</string>
    <string name="success_remove">Удалено</string>
    <string name="success_update">Изменено</string>
    <string name="success_add">Добавлено</string>
    <string name="try_again">Повторите попытку</string>
    <string name="error_permission">В разрешении отказано</string>
    <string name="source">ANDROID</string>
    <string name="status_default">IN PROCESSING</string>
    <string name="error">Ошибка</string>
    <string name="no_internet">Нет интернета</string>
    <string name="title_delete_profile">Аккаунт будет удалён</string>
    <string name="question_delete_profile">Вы действительно хотите удалить аккаунт?</string>
    <string name="btn_profile_delete"><u>Удалить аккаунт</u></string>
    <string name="no_category">Нет категории</string>
    <string name="btn_filter_requests">Фильтр по категориям</string>
    <string name="btn_all_category">Все</string>
    <string name="btn_add_marker">Отметить на карте</string>
    <string name="btn_add_video">Загрузить видео</string>
    <string name="save_video">Видео сохранены</string>
    <string name="header_multipart">multipart/form-data</string>
    <string name="token_name">refreshToken</string>
    <string name="error_401">401</string>
    <string name="save_address">Адрес сохранён</string>
    <string name="input_login">Логин</string>
    <string name="btn_next">Начать</string>
    <string name="app_description">Благополучие граждан превыше всего!</string>
    <string name="btn_login">Войти</string>
    <string name="btn_auth">Зарегистрироваться</string>
    <string name="motivation_auth">Есть проблемы? Решим!</string>
    <string name="motivation_login">Оставь заявку! Помоги городу!</string>
    <string name="title_category">Категория:</string>
    <string name="title_bus_stations">Остановка</string>
    <string name="error_password">Пароль не менее 8 символов</string>
    <string name="list_empty">Список пока пуст</string>
</resources>