<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_category_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_appeal"
        android:icon="@drawable/ic_add_24"
        android:title="@string/title_new_appeal" />

    <item
        android:id="@+id/navigation_archive"
        android:icon="@drawable/ic_archive_24"
        android:title="@string/title_archive" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/title_profile" />

</menu>