<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/input_name"
            android:paddingTop="20dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:inputType="textCapSentences"
                android:textColorHighlight="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/input_number"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:inputType="phone"
                android:textColorHighlight="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/input_email"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/input_number"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_gradient"
            android:text="@string/btn_ok"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <TextView
            android:id="@+id/btn_delete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/btn_profile_delete"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>